--- a/src/index.html
+++ b/src/index.html
@@ -17,5 +17,7 @@
 </head>
 <body>
   <app-root></app-root>
+  <!-- <script src=”http://maps.googleapis.com/maps/api/js?key=AIzaSyC9BIM8E7oX9Yl2XNTc3G6BYALpktRMNk0"></script> -->
+   <!-- <script src="https://maps.googleapis.com/maps/api/js?sensor=false"></script> -->
 </body>
 </html>
