--- a/src/index.html
+++ b/src/index.html
@@ -14,10 +14,10 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 <link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.7.0/css/all.css' integrity='sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ' crossorigin='anonymous'>
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 </head>
 <body>
   <app-root></app-root>
-  <!-- <script src=”http://maps.googleapis.com/maps/api/js?key=AIzaSyC9BIM8E7oX9Yl2XNTc3G6BYALpktRMNk0"></script> -->
-   <!-- <script src="https://maps.googleapis.com/maps/api/js?sensor=false"></script> -->
+  <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyBf7A8VkMbqw8TCsraJMLkOq9ElSpqufhg"></script>
 </body>
 </html>
