--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,6 @@
 </head>
 <body>
   <app-root></app-root>
-<script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?&key=AIzaSyDZ5rIF_as0p3eJW08nKkQE2c0EFdmpG1w&libraries=places"></script>
+<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?&key=AIzaSyDZ5rIF_as0p3eJW08nKkQE2c0EFdmpG1w&libraries=places"></script>
 </body>
 </html>
