--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en" style="overflow-x: hidden;">
 <head>
   <meta charset="utf-8">
-  <title>Digital</title>
+  <title>CG DFNOL</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
